--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img src="img/Logo.png" alt="logo">
             </div>
             <textarea placeholder="Ingrese el texto aquí"></textarea>
-            <div class="note"><i class="fas fa-hand-paper"></i> Puedes usar tanto Mayúsculas y Minúsculas como también acentos !!!</div>
+            <div class="note"><i class="fas fa-hand-paper"></i> Solo letras minusculas y sin acentos !!!</div>
             <div class="buttons">
                 <button id="encrypt-btn" class="btn encrypt">Encriptar</button>
                 <button id="decrypt-btn" class="btn decrypt">Desencriptar</button>
